infra/sonar/2-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: sonar
  name: sonar
  namespace: ci
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonar
  template:
    metadata:
      labels:
        app: sonar
    spec:
      containers:
      - image: sonarqube:7.9.1-community
        imagePullPolicy: IfNotPresent
        name: sonar
        ports:
        - containerPort: 9000
          protocol: TCP
        - containerPort: 9092
          protocol: TCP
        volumeMounts:
        - name: sonar-persistent-storage
          mountPath: /opt/sonarqube/data
          subPath: data
        - name: sonar-persistent-storage
          mountPath: /opt/sonarqube/extensions
          subPath: extensions
      volumes:
      - name: sonar-persistent-storage
        persistentVolumeClaim:
          claimName: claim-sonar
      restartPolicy: Always
