infra/sonar/3-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonar
  name: sonar
  namespace: ci
spec:
  ports:
  - port: 9000
    name: web
    protocol: TCP
    targetPort: 9000
  selector:
    app: sonar
