infra/sonar/4-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: ci
  name: sonar
spec:
  rules:
  - host: sonar.tozzi.fan
    http:
      paths:
      - backend:
          serviceName: sonar
          servicePort: 9000
